Apps/cafe-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-clusterip
  namespace: cafe-apps
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: v1
kind: Service
metadata:
  name: tea-clusterip
  namespace: cafe-apps
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
