Apps/cafe-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-nodeport
  namespace: cafe-apps
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: v1
kind: Service
metadata:
  name: tea-nodeport
  namespace: cafe-apps
  labels:
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: tea
