Apps/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe-apps
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-clusterip
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-clusterip
          servicePort: 80
